parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> surah
Rule 1     surah -> verse_n
Rule 2     surah -> surah verse_n
Rule 3     verse_n -> verse DIVIDER
Rule 4     verse -> vs
Rule 5     verse -> ns
Rule 6     verse -> CONJ ns pp object
Rule 7     verse -> CONJ UNDEF_N CONJ vs
Rule 8     verse -> VERB object
Rule 9     verse -> CONJ UNDEF_N CONJ UNDEF_N
Rule 10    verse -> CONJ ns
Rule 11    ns -> PRON UNDEF_N
Rule 12    ns -> UNDEF_N UNDEF_N
Rule 13    ns -> CONJ UNDEF_N pp UNDEF_N UNDEF_N
Rule 14    ns -> UNDEF_N UNDEF_N UNDEF_N
Rule 15    ns -> CONJ UNDEF_N UNDEF_N UNDEF_N
Rule 16    ns -> VERB pp VERB subject CONJ vs CONJ vs
Rule 17    ns -> DEM UNDEF_N DEF_N
Rule 18    ns -> REL vs ns
Rule 19    ns -> PRON_PLURAL UNDEF_N DEF_N
Rule 20    ns -> pp UNDEF_N adj
Rule 21    vs -> NEG VERB pp object
Rule 22    vs -> REL VERB
Rule 23    vs -> EMPH CERT VERB subject object pp
Rule 24    vs -> INTG VERB object
Rule 25    vs -> NEG VERB pp subject
Rule 26    vs -> VERB subject object adj
Rule 27    vs -> NEG VERB object subject
Rule 28    vs -> INTG NEG VERB pp object
Rule 29    vs -> CONJ VERB subject object object
Rule 30    vs -> REM NEG VERB object
Rule 31    vs -> CONJ REL VERB PRON REL DEF_N
Rule 32    vs -> VERB subject pp
Rule 33    pp -> PREP DEM
Rule 34    pp -> PREP UNDEF_N
Rule 35    pp -> PREP PRON
Rule 36    pp -> PREP DEF_N
Rule 37    pp -> PREP REL
Rule 38    pp -> PREP UNDEF_N PRON
Rule 39    sc -> SUB vs
Rule 40    object -> DEF_N
Rule 41    object -> UNDEF_N
Rule 42    object -> sc
Rule 43    object -> vs
Rule 44    object -> PRON
Rule 45    subject -> PRON
Rule 46    subject -> UNDEF_N
Rule 47    adj -> UNDEF_N

Terminals, with rules where they appear

CERT                 : 23
CONJ                 : 6 7 7 9 9 10 13 15 16 16 29 31
DEF_N                : 17 19 31 36 40
DEM                  : 17 33
DIVIDER              : 3
EMPH                 : 23
INTG                 : 24 28
NEG                  : 21 25 27 28 30
PREP                 : 33 34 35 36 37 38
PRON                 : 11 31 35 38 44 45
PRON_PLURAL          : 19
REL                  : 18 22 31 31 37
REM                  : 30
SUB                  : 39
UNDEF_N              : 7 9 9 11 12 12 13 13 13 14 14 14 15 15 15 17 19 20 34 38 41 46 47
VERB                 : 8 16 16 21 22 23 24 25 26 27 28 29 30 31 32
error                : 

Nonterminals, with rules where they appear

adj                  : 20 26
ns                   : 5 6 10 18
object               : 6 8 21 23 24 26 27 28 29 29 30
pp                   : 6 13 16 20 21 23 25 28 32
sc                   : 42
subject              : 16 23 25 26 27 29 32
surah                : 2 0
verse                : 3
verse_n              : 1 2
vs                   : 4 7 16 16 18 39 43

Parsing method: LALR

state 0

    (0) S' -> . surah
    (1) surah -> . verse_n
    (2) surah -> . surah verse_n
    (3) verse_n -> . verse DIVIDER
    (4) verse -> . vs
    (5) verse -> . ns
    (6) verse -> . CONJ ns pp object
    (7) verse -> . CONJ UNDEF_N CONJ vs
    (8) verse -> . VERB object
    (9) verse -> . CONJ UNDEF_N CONJ UNDEF_N
    (10) verse -> . CONJ ns
    (21) vs -> . NEG VERB pp object
    (22) vs -> . REL VERB
    (23) vs -> . EMPH CERT VERB subject object pp
    (24) vs -> . INTG VERB object
    (25) vs -> . NEG VERB pp subject
    (26) vs -> . VERB subject object adj
    (27) vs -> . NEG VERB object subject
    (28) vs -> . INTG NEG VERB pp object
    (29) vs -> . CONJ VERB subject object object
    (30) vs -> . REM NEG VERB object
    (31) vs -> . CONJ REL VERB PRON REL DEF_N
    (32) vs -> . VERB subject pp
    (11) ns -> . PRON UNDEF_N
    (12) ns -> . UNDEF_N UNDEF_N
    (13) ns -> . CONJ UNDEF_N pp UNDEF_N UNDEF_N
    (14) ns -> . UNDEF_N UNDEF_N UNDEF_N
    (15) ns -> . CONJ UNDEF_N UNDEF_N UNDEF_N
    (16) ns -> . VERB pp VERB subject CONJ vs CONJ vs
    (17) ns -> . DEM UNDEF_N DEF_N
    (18) ns -> . REL vs ns
    (19) ns -> . PRON_PLURAL UNDEF_N DEF_N
    (20) ns -> . pp UNDEF_N adj
    (33) pp -> . PREP DEM
    (34) pp -> . PREP UNDEF_N
    (35) pp -> . PREP PRON
    (36) pp -> . PREP DEF_N
    (37) pp -> . PREP REL
    (38) pp -> . PREP UNDEF_N PRON

    CONJ            shift and go to state 6
    VERB            shift and go to state 9
    NEG             shift and go to state 10
    REL             shift and go to state 11
    EMPH            shift and go to state 12
    INTG            shift and go to state 13
    REM             shift and go to state 14
    PRON            shift and go to state 15
    UNDEF_N         shift and go to state 8
    DEM             shift and go to state 16
    PRON_PLURAL     shift and go to state 17
    PREP            shift and go to state 18

    surah                          shift and go to state 1
    verse_n                        shift and go to state 2
    verse                          shift and go to state 3
    vs                             shift and go to state 4
    ns                             shift and go to state 5
    pp                             shift and go to state 7

state 1

    (0) S' -> surah .
    (2) surah -> surah . verse_n
    (3) verse_n -> . verse DIVIDER
    (4) verse -> . vs
    (5) verse -> . ns
    (6) verse -> . CONJ ns pp object
    (7) verse -> . CONJ UNDEF_N CONJ vs
    (8) verse -> . VERB object
    (9) verse -> . CONJ UNDEF_N CONJ UNDEF_N
    (10) verse -> . CONJ ns
    (21) vs -> . NEG VERB pp object
    (22) vs -> . REL VERB
    (23) vs -> . EMPH CERT VERB subject object pp
    (24) vs -> . INTG VERB object
    (25) vs -> . NEG VERB pp subject
    (26) vs -> . VERB subject object adj
    (27) vs -> . NEG VERB object subject
    (28) vs -> . INTG NEG VERB pp object
    (29) vs -> . CONJ VERB subject object object
    (30) vs -> . REM NEG VERB object
    (31) vs -> . CONJ REL VERB PRON REL DEF_N
    (32) vs -> . VERB subject pp
    (11) ns -> . PRON UNDEF_N
    (12) ns -> . UNDEF_N UNDEF_N
    (13) ns -> . CONJ UNDEF_N pp UNDEF_N UNDEF_N
    (14) ns -> . UNDEF_N UNDEF_N UNDEF_N
    (15) ns -> . CONJ UNDEF_N UNDEF_N UNDEF_N
    (16) ns -> . VERB pp VERB subject CONJ vs CONJ vs
    (17) ns -> . DEM UNDEF_N DEF_N
    (18) ns -> . REL vs ns
    (19) ns -> . PRON_PLURAL UNDEF_N DEF_N
    (20) ns -> . pp UNDEF_N adj
    (33) pp -> . PREP DEM
    (34) pp -> . PREP UNDEF_N
    (35) pp -> . PREP PRON
    (36) pp -> . PREP DEF_N
    (37) pp -> . PREP REL
    (38) pp -> . PREP UNDEF_N PRON

    CONJ            shift and go to state 6
    VERB            shift and go to state 9
    NEG             shift and go to state 10
    REL             shift and go to state 11
    EMPH            shift and go to state 12
    INTG            shift and go to state 13
    REM             shift and go to state 14
    PRON            shift and go to state 15
    UNDEF_N         shift and go to state 8
    DEM             shift and go to state 16
    PRON_PLURAL     shift and go to state 17
    PREP            shift and go to state 18

    verse_n                        shift and go to state 19
    verse                          shift and go to state 3
    vs                             shift and go to state 4
    ns                             shift and go to state 5
    pp                             shift and go to state 7

state 2

    (1) surah -> verse_n .

    CONJ            reduce using rule 1 (surah -> verse_n .)
    VERB            reduce using rule 1 (surah -> verse_n .)
    NEG             reduce using rule 1 (surah -> verse_n .)
    REL             reduce using rule 1 (surah -> verse_n .)
    EMPH            reduce using rule 1 (surah -> verse_n .)
    INTG            reduce using rule 1 (surah -> verse_n .)
    REM             reduce using rule 1 (surah -> verse_n .)
    PRON            reduce using rule 1 (surah -> verse_n .)
    UNDEF_N         reduce using rule 1 (surah -> verse_n .)
    DEM             reduce using rule 1 (surah -> verse_n .)
    PRON_PLURAL     reduce using rule 1 (surah -> verse_n .)
    PREP            reduce using rule 1 (surah -> verse_n .)
    $end            reduce using rule 1 (surah -> verse_n .)


state 3

    (3) verse_n -> verse . DIVIDER

    DIVIDER         shift and go to state 20


state 4

    (4) verse -> vs .

    DIVIDER         reduce using rule 4 (verse -> vs .)


state 5

    (5) verse -> ns .

    DIVIDER         reduce using rule 5 (verse -> ns .)


state 6

    (6) verse -> CONJ . ns pp object
    (7) verse -> CONJ . UNDEF_N CONJ vs
    (9) verse -> CONJ . UNDEF_N CONJ UNDEF_N
    (10) verse -> CONJ . ns
    (29) vs -> CONJ . VERB subject object object
    (31) vs -> CONJ . REL VERB PRON REL DEF_N
    (13) ns -> CONJ . UNDEF_N pp UNDEF_N UNDEF_N
    (15) ns -> CONJ . UNDEF_N UNDEF_N UNDEF_N
    (11) ns -> . PRON UNDEF_N
    (12) ns -> . UNDEF_N UNDEF_N
    (13) ns -> . CONJ UNDEF_N pp UNDEF_N UNDEF_N
    (14) ns -> . UNDEF_N UNDEF_N UNDEF_N
    (15) ns -> . CONJ UNDEF_N UNDEF_N UNDEF_N
    (16) ns -> . VERB pp VERB subject CONJ vs CONJ vs
    (17) ns -> . DEM UNDEF_N DEF_N
    (18) ns -> . REL vs ns
    (19) ns -> . PRON_PLURAL UNDEF_N DEF_N
    (20) ns -> . pp UNDEF_N adj
    (33) pp -> . PREP DEM
    (34) pp -> . PREP UNDEF_N
    (35) pp -> . PREP PRON
    (36) pp -> . PREP DEF_N
    (37) pp -> . PREP REL
    (38) pp -> . PREP UNDEF_N PRON

    UNDEF_N         shift and go to state 23
    VERB            shift and go to state 24
    REL             shift and go to state 25
    PRON            shift and go to state 15
    CONJ            shift and go to state 21
    DEM             shift and go to state 16
    PRON_PLURAL     shift and go to state 17
    PREP            shift and go to state 18

    ns                             shift and go to state 22
    pp                             shift and go to state 7

state 7

    (20) ns -> pp . UNDEF_N adj

    UNDEF_N         shift and go to state 26


state 8

    (12) ns -> UNDEF_N . UNDEF_N
    (14) ns -> UNDEF_N . UNDEF_N UNDEF_N

    UNDEF_N         shift and go to state 27


state 9

    (8) verse -> VERB . object
    (26) vs -> VERB . subject object adj
    (32) vs -> VERB . subject pp
    (16) ns -> VERB . pp VERB subject CONJ vs CONJ vs
    (40) object -> . DEF_N
    (41) object -> . UNDEF_N
    (42) object -> . sc
    (43) object -> . vs
    (44) object -> . PRON
    (45) subject -> . PRON
    (46) subject -> . UNDEF_N
    (33) pp -> . PREP DEM
    (34) pp -> . PREP UNDEF_N
    (35) pp -> . PREP PRON
    (36) pp -> . PREP DEF_N
    (37) pp -> . PREP REL
    (38) pp -> . PREP UNDEF_N PRON
    (39) sc -> . SUB vs
    (21) vs -> . NEG VERB pp object
    (22) vs -> . REL VERB
    (23) vs -> . EMPH CERT VERB subject object pp
    (24) vs -> . INTG VERB object
    (25) vs -> . NEG VERB pp subject
    (26) vs -> . VERB subject object adj
    (27) vs -> . NEG VERB object subject
    (28) vs -> . INTG NEG VERB pp object
    (29) vs -> . CONJ VERB subject object object
    (30) vs -> . REM NEG VERB object
    (31) vs -> . CONJ REL VERB PRON REL DEF_N
    (32) vs -> . VERB subject pp

    DEF_N           shift and go to state 34
    UNDEF_N         shift and go to state 35
    PRON            shift and go to state 37
    PREP            shift and go to state 18
    SUB             shift and go to state 39
    NEG             shift and go to state 10
    REL             shift and go to state 38
    EMPH            shift and go to state 12
    INTG            shift and go to state 13
    VERB            shift and go to state 28
    CONJ            shift and go to state 32
    REM             shift and go to state 14

    object                         shift and go to state 29
    subject                        shift and go to state 30
    pp                             shift and go to state 31
    vs                             shift and go to state 33
    sc                             shift and go to state 36

state 10

    (21) vs -> NEG . VERB pp object
    (25) vs -> NEG . VERB pp subject
    (27) vs -> NEG . VERB object subject

    VERB            shift and go to state 40


state 11

    (22) vs -> REL . VERB
    (18) ns -> REL . vs ns
    (21) vs -> . NEG VERB pp object
    (22) vs -> . REL VERB
    (23) vs -> . EMPH CERT VERB subject object pp
    (24) vs -> . INTG VERB object
    (25) vs -> . NEG VERB pp subject
    (26) vs -> . VERB subject object adj
    (27) vs -> . NEG VERB object subject
    (28) vs -> . INTG NEG VERB pp object
    (29) vs -> . CONJ VERB subject object object
    (30) vs -> . REM NEG VERB object
    (31) vs -> . CONJ REL VERB PRON REL DEF_N
    (32) vs -> . VERB subject pp

    VERB            shift and go to state 41
    NEG             shift and go to state 10
    REL             shift and go to state 38
    EMPH            shift and go to state 12
    INTG            shift and go to state 13
    CONJ            shift and go to state 32
    REM             shift and go to state 14

    vs                             shift and go to state 42

state 12

    (23) vs -> EMPH . CERT VERB subject object pp

    CERT            shift and go to state 43


state 13

    (24) vs -> INTG . VERB object
    (28) vs -> INTG . NEG VERB pp object

    VERB            shift and go to state 44
    NEG             shift and go to state 45


state 14

    (30) vs -> REM . NEG VERB object

    NEG             shift and go to state 46


state 15

    (11) ns -> PRON . UNDEF_N

    UNDEF_N         shift and go to state 47


state 16

    (17) ns -> DEM . UNDEF_N DEF_N

    UNDEF_N         shift and go to state 48


state 17

    (19) ns -> PRON_PLURAL . UNDEF_N DEF_N

    UNDEF_N         shift and go to state 49


state 18

    (33) pp -> PREP . DEM
    (34) pp -> PREP . UNDEF_N
    (35) pp -> PREP . PRON
    (36) pp -> PREP . DEF_N
    (37) pp -> PREP . REL
    (38) pp -> PREP . UNDEF_N PRON

    DEM             shift and go to state 50
    UNDEF_N         shift and go to state 51
    PRON            shift and go to state 52
    DEF_N           shift and go to state 53
    REL             shift and go to state 54


state 19

    (2) surah -> surah verse_n .

    CONJ            reduce using rule 2 (surah -> surah verse_n .)
    VERB            reduce using rule 2 (surah -> surah verse_n .)
    NEG             reduce using rule 2 (surah -> surah verse_n .)
    REL             reduce using rule 2 (surah -> surah verse_n .)
    EMPH            reduce using rule 2 (surah -> surah verse_n .)
    INTG            reduce using rule 2 (surah -> surah verse_n .)
    REM             reduce using rule 2 (surah -> surah verse_n .)
    PRON            reduce using rule 2 (surah -> surah verse_n .)
    UNDEF_N         reduce using rule 2 (surah -> surah verse_n .)
    DEM             reduce using rule 2 (surah -> surah verse_n .)
    PRON_PLURAL     reduce using rule 2 (surah -> surah verse_n .)
    PREP            reduce using rule 2 (surah -> surah verse_n .)
    $end            reduce using rule 2 (surah -> surah verse_n .)


state 20

    (3) verse_n -> verse DIVIDER .

    CONJ            reduce using rule 3 (verse_n -> verse DIVIDER .)
    VERB            reduce using rule 3 (verse_n -> verse DIVIDER .)
    NEG             reduce using rule 3 (verse_n -> verse DIVIDER .)
    REL             reduce using rule 3 (verse_n -> verse DIVIDER .)
    EMPH            reduce using rule 3 (verse_n -> verse DIVIDER .)
    INTG            reduce using rule 3 (verse_n -> verse DIVIDER .)
    REM             reduce using rule 3 (verse_n -> verse DIVIDER .)
    PRON            reduce using rule 3 (verse_n -> verse DIVIDER .)
    UNDEF_N         reduce using rule 3 (verse_n -> verse DIVIDER .)
    DEM             reduce using rule 3 (verse_n -> verse DIVIDER .)
    PRON_PLURAL     reduce using rule 3 (verse_n -> verse DIVIDER .)
    PREP            reduce using rule 3 (verse_n -> verse DIVIDER .)
    $end            reduce using rule 3 (verse_n -> verse DIVIDER .)


state 21

    (13) ns -> CONJ . UNDEF_N pp UNDEF_N UNDEF_N
    (15) ns -> CONJ . UNDEF_N UNDEF_N UNDEF_N

    UNDEF_N         shift and go to state 55


state 22

    (6) verse -> CONJ ns . pp object
    (10) verse -> CONJ ns .
    (33) pp -> . PREP DEM
    (34) pp -> . PREP UNDEF_N
    (35) pp -> . PREP PRON
    (36) pp -> . PREP DEF_N
    (37) pp -> . PREP REL
    (38) pp -> . PREP UNDEF_N PRON

    DIVIDER         reduce using rule 10 (verse -> CONJ ns .)
    PREP            shift and go to state 18

    pp                             shift and go to state 56

state 23

    (7) verse -> CONJ UNDEF_N . CONJ vs
    (9) verse -> CONJ UNDEF_N . CONJ UNDEF_N
    (13) ns -> CONJ UNDEF_N . pp UNDEF_N UNDEF_N
    (15) ns -> CONJ UNDEF_N . UNDEF_N UNDEF_N
    (12) ns -> UNDEF_N . UNDEF_N
    (14) ns -> UNDEF_N . UNDEF_N UNDEF_N
    (33) pp -> . PREP DEM
    (34) pp -> . PREP UNDEF_N
    (35) pp -> . PREP PRON
    (36) pp -> . PREP DEF_N
    (37) pp -> . PREP REL
    (38) pp -> . PREP UNDEF_N PRON

    CONJ            shift and go to state 57
    UNDEF_N         shift and go to state 58
    PREP            shift and go to state 18

    pp                             shift and go to state 59

state 24

    (29) vs -> CONJ VERB . subject object object
    (16) ns -> VERB . pp VERB subject CONJ vs CONJ vs
    (45) subject -> . PRON
    (46) subject -> . UNDEF_N
    (33) pp -> . PREP DEM
    (34) pp -> . PREP UNDEF_N
    (35) pp -> . PREP PRON
    (36) pp -> . PREP DEF_N
    (37) pp -> . PREP REL
    (38) pp -> . PREP UNDEF_N PRON

    PRON            shift and go to state 61
    UNDEF_N         shift and go to state 62
    PREP            shift and go to state 18

    subject                        shift and go to state 60
    pp                             shift and go to state 31

state 25

    (31) vs -> CONJ REL . VERB PRON REL DEF_N
    (18) ns -> REL . vs ns
    (21) vs -> . NEG VERB pp object
    (22) vs -> . REL VERB
    (23) vs -> . EMPH CERT VERB subject object pp
    (24) vs -> . INTG VERB object
    (25) vs -> . NEG VERB pp subject
    (26) vs -> . VERB subject object adj
    (27) vs -> . NEG VERB object subject
    (28) vs -> . INTG NEG VERB pp object
    (29) vs -> . CONJ VERB subject object object
    (30) vs -> . REM NEG VERB object
    (31) vs -> . CONJ REL VERB PRON REL DEF_N
    (32) vs -> . VERB subject pp

    VERB            shift and go to state 63
    NEG             shift and go to state 10
    REL             shift and go to state 38
    EMPH            shift and go to state 12
    INTG            shift and go to state 13
    CONJ            shift and go to state 32
    REM             shift and go to state 14

    vs                             shift and go to state 42

state 26

    (20) ns -> pp UNDEF_N . adj
    (47) adj -> . UNDEF_N

    UNDEF_N         shift and go to state 64

    adj                            shift and go to state 65

state 27

    (12) ns -> UNDEF_N UNDEF_N .
    (14) ns -> UNDEF_N UNDEF_N . UNDEF_N

    DIVIDER         reduce using rule 12 (ns -> UNDEF_N UNDEF_N .)
    PREP            reduce using rule 12 (ns -> UNDEF_N UNDEF_N .)
    UNDEF_N         shift and go to state 66


state 28

    (26) vs -> VERB . subject object adj
    (32) vs -> VERB . subject pp
    (45) subject -> . PRON
    (46) subject -> . UNDEF_N

    PRON            shift and go to state 61
    UNDEF_N         shift and go to state 62

    subject                        shift and go to state 30

state 29

    (8) verse -> VERB object .

    DIVIDER         reduce using rule 8 (verse -> VERB object .)


state 30

    (26) vs -> VERB subject . object adj
    (32) vs -> VERB subject . pp
    (40) object -> . DEF_N
    (41) object -> . UNDEF_N
    (42) object -> . sc
    (43) object -> . vs
    (44) object -> . PRON
    (33) pp -> . PREP DEM
    (34) pp -> . PREP UNDEF_N
    (35) pp -> . PREP PRON
    (36) pp -> . PREP DEF_N
    (37) pp -> . PREP REL
    (38) pp -> . PREP UNDEF_N PRON
    (39) sc -> . SUB vs
    (21) vs -> . NEG VERB pp object
    (22) vs -> . REL VERB
    (23) vs -> . EMPH CERT VERB subject object pp
    (24) vs -> . INTG VERB object
    (25) vs -> . NEG VERB pp subject
    (26) vs -> . VERB subject object adj
    (27) vs -> . NEG VERB object subject
    (28) vs -> . INTG NEG VERB pp object
    (29) vs -> . CONJ VERB subject object object
    (30) vs -> . REM NEG VERB object
    (31) vs -> . CONJ REL VERB PRON REL DEF_N
    (32) vs -> . VERB subject pp

    DEF_N           shift and go to state 34
    UNDEF_N         shift and go to state 69
    PRON            shift and go to state 70
    PREP            shift and go to state 18
    SUB             shift and go to state 39
    NEG             shift and go to state 10
    REL             shift and go to state 38
    EMPH            shift and go to state 12
    INTG            shift and go to state 13
    VERB            shift and go to state 28
    CONJ            shift and go to state 32
    REM             shift and go to state 14

    object                         shift and go to state 67
    pp                             shift and go to state 68
    sc                             shift and go to state 36
    vs                             shift and go to state 33

state 31

    (16) ns -> VERB pp . VERB subject CONJ vs CONJ vs

    VERB            shift and go to state 71


state 32

    (29) vs -> CONJ . VERB subject object object
    (31) vs -> CONJ . REL VERB PRON REL DEF_N

    VERB            shift and go to state 72
    REL             shift and go to state 73


state 33

    (43) object -> vs .

    DIVIDER         reduce using rule 43 (object -> vs .)
    UNDEF_N         reduce using rule 43 (object -> vs .)
    PRON            reduce using rule 43 (object -> vs .)
    CONJ            reduce using rule 43 (object -> vs .)
    VERB            reduce using rule 43 (object -> vs .)
    DEM             reduce using rule 43 (object -> vs .)
    REL             reduce using rule 43 (object -> vs .)
    PRON_PLURAL     reduce using rule 43 (object -> vs .)
    PREP            reduce using rule 43 (object -> vs .)
    DEF_N           reduce using rule 43 (object -> vs .)
    SUB             reduce using rule 43 (object -> vs .)
    NEG             reduce using rule 43 (object -> vs .)
    EMPH            reduce using rule 43 (object -> vs .)
    INTG            reduce using rule 43 (object -> vs .)
    REM             reduce using rule 43 (object -> vs .)


state 34

    (40) object -> DEF_N .

    DIVIDER         reduce using rule 40 (object -> DEF_N .)
    UNDEF_N         reduce using rule 40 (object -> DEF_N .)
    PRON            reduce using rule 40 (object -> DEF_N .)
    CONJ            reduce using rule 40 (object -> DEF_N .)
    VERB            reduce using rule 40 (object -> DEF_N .)
    DEM             reduce using rule 40 (object -> DEF_N .)
    REL             reduce using rule 40 (object -> DEF_N .)
    PRON_PLURAL     reduce using rule 40 (object -> DEF_N .)
    PREP            reduce using rule 40 (object -> DEF_N .)
    DEF_N           reduce using rule 40 (object -> DEF_N .)
    SUB             reduce using rule 40 (object -> DEF_N .)
    NEG             reduce using rule 40 (object -> DEF_N .)
    EMPH            reduce using rule 40 (object -> DEF_N .)
    INTG            reduce using rule 40 (object -> DEF_N .)
    REM             reduce using rule 40 (object -> DEF_N .)


state 35

    (41) object -> UNDEF_N .
    (46) subject -> UNDEF_N .
